# adaptive-text-steering

./: .gitignore  README.md  pyproject.toml
config/: experiment_config.py  model_config.py  score_and_plot_config.py
datasets/random/: clean_random_sentences.py  random_pairs_500.json  random_phrases_100_en.json  random_sentences_1000.txt  random_summaries_en.json  random_topic_descriptions_100_en.json  random_txt_to_json.py  random_words_100_en.json
notebooks/cross_language_generalization/: language_generalisation.ipynb
notebooks/newts_topics/: create_topic_strings.ipynb
notebooks/post_processing_conceptual/: activation_difference_vector.ipynb  difference_of_means_line_conceptual_plot_lda.py  difference_of_means_line_conceptual_plot_pca copy 2.py  difference_of_means_line_sentiment_conceptual_plot_pca copy.py  kappa_sentiment_conceptual_plot.py  post_processing_conceptual.ipynb
scripts/: text.sh
src/apply_vectors/: apply_readability_vectors.py  apply_sentiment_vectors_to_NEWTS.py  apply_simplicity_vectors_movies.py  apply_simplicity_vectors_questions.py  apply_steering_vectors_and_prompting_to_NEWTS.py  apply_steering_vectors_and_prompting_to_NEWTS_old.py  apply_steering_vectors_to_NEWTS.py  apply_topic_vectors_to_NEWTS copy.py  apply_topic_vectors_to_NEWTS.py  generate_topical_newts_summaries.py  run_experiments.py
src/create_training_samples/: create_readability_vector_training_samples.py  create_sentiment_vector_training_samples.py  create_topic_representations.py  create_topic_training_samples.py  create_topic_vector_training_samples.py  (+1 more)
src/evaluation/: README.md  (+15 more)
tests/: test_compute_dimensionality_reduction.py  test_compute_properties_of_activations.py  test_compute_steering_vectors.py  test_pca.py
(+392 files in other folders)
